Bug 394402 - Error message when creating new CTags index target
Summary: Error message when creating new CTags index target
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.04.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-18 08:21 UTC by Thomas Surrel
Modified: 2018-05-26 03:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kate CTags addon error message (216.76 KB, image/png)
2018-05-18 08:21 UTC, Thomas Surrel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Surrel 2018-05-18 08:21:23 UTC
Created attachment 112725 [details]
Kate CTags addon error message

Hi,
when trying to add a new index target in the CTags addon, the dialog message to select the folder displays an error message: <XXX> is a file but a folder was expected. The <XXX> filename displayed corresponds to the file that is currently being edited.

The problem does not appear if no files are currently opened in Kate.

Thomas
Comment 1 Nate Graham 2018-05-26 03:03:50 UTC
Git commit 1418739a540cad66abd4c4d88dfd77f490cd0099 by Nathaniel Graham, on behalf of Thomas Surrel.
Committed on 26/05/2018 at 03:03.
Pushed by ngraham into branch 'master'.

Fix CTags dialog error message when adding target

Summary:
When trying to add a new index target in the CTags addon (from the view, not from the settings), the dialog message to select the folder is set to point to the current _file_ instead of the current file _directory_. The dialog than complains about it not being a directory.

Reviewers: #kate, sars

Reviewed By: #kate, sars

Subscribers: sars, kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D13115

M  +1    -1    addons/kate-ctags/kate_ctags_view.cpp

https://commits.kde.org/kate/1418739a540cad66abd4c4d88dfd77f490cd0099