Fix CTags dialog error message when adding target

Summary:
When trying to add a new index target in the CTags addon (from the view, not from the settings), the dialog message to select the folder is set to point to the current _file_ instead of the current file _directory_. The dialog than complains about it not being a directory.

BUG: 394402

Reviewers: #kate, sars

Reviewed By: #kate, sars

Subscribers: sars, kwrite-devel

Tags: #kate

Differential Revision: https://phabricator.kde.org/D13115